# next-app

./: .gitignore  Cargo.toml
nextjs/apps/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
nextjs/apps/src/app/: page.tsx
nextjs/apps/src/app/data/: page.tsx
nextjs/apps/src/app/data/score/: page.tsx
nextjs/apps/src/app/grid/: page.tsx
nextjs/apps/src/app/interview/: page.tsx
nextjs/apps/src/demo/: DR 구축 컨설팅 추가 질의서 답변.txt  solutions.txt  t
src/: conv_csv_to_json.rs  main.rs  module1.rs  upload_chunk.rs
src/module2/: import.rs  mod.rs
src/text/: DR 구축 컨설팅 추가 질의서 답변.txt
