[package]
name = "study"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
chrono-tz = "0.10.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
reqwest = { version = "0.11", features = ["json", "multipart"]}
tokio = { version = "1", features = ["full"]}
dotenv = "0.15.0"
csv = "0.15.0"
json = "0.11.13"
getopts = "0.2.15"